# travel-reimbursement-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Travel_Reimbursement_Agent_CaseStudy.pptx  config.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/agents/: llm_factory.py  reimbursement_agent.py
app/api/: routes.py
app/config/: settings.py
app/core/: __init__.py  application.py
app/exceptions/: __init__.py
app/middleware/: error_handler.py  request_logging.py
app/models/: __init__.py
app/prompts/: templates.py
app/rag/: embeddings.py  vector_store.py
app/schemas/: __init__.py
app/tools/: __init__.py  approval_matrix.py  currency_conversion.py  duplicate_claim.py  expense_limit.py  output_validator.py  policy_lookup.py  receipt_completeness.py
app/utils/: __init__.py  logging_config.py
data/claims/: claim_001_approved.json  claim_002_partially_approved.json  claim_003_rejected.json  claim_004_manual_review.json  claim_005_partial.json
data/policies/: approval_matrix.md  expense_limits.md  travel_policy.md
data/receipts/: sample_receipts.json
data/sample_outputs/: output_claim_001.json  output_claim_003.json  output_claim_004.json
docs/: curl_examples.md  postman_collection.json
docs/architecture/: architecture.md
scripts/: build_index.py  test_claim.py
tests/: conftest.py  test_agent.py  test_api.py  test_schemas.py  test_tools.py
